name:
  messaging-service
version:
  0.1.0
synopsis:
  A library for implementing client-server remote services
description:
  An API abstracting over the typical tasks of client-server communication.
  It automates the authentication process and keeping of the connection alive.
  The user can implement protocols of any form based on messaging.

  Useful for writing all kinds of services. 
  E.g., the "graph-db" networking interface is based on this library.
category:
  Network, Service
homepage:
  https://github.com/nikita-volkov/messaging-service 
bug-reports:
  https://github.com/nikita-volkov/messaging-service/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/messaging-service.git


library
  hs-source-dirs:
    library
  exposed-modules:
    MessagingService.Server
  other-modules:
    MessagingService.Server.ClientState
    MessagingService.Protocol
    MessagingService.Util.FileSystem
    MessagingService.Util.Prelude
  build-depends:
    -- streaming:
    pipes == 4.0.*,
    pipes-bytestring,
    pipes-cereal-plus == 0.2.*,
    -- networking:
    network == 2.4.*,
    network-simple == 0.3.*,
    pipes-network == 0.6.*,
    -- file-system:
    filelock == 0.1.*,
    directory,
    system-fileio,
    system-filepath,
    -- concurrency:
    threads == 0.5.*,
    cio,
    async == 2.0.*,
    stm,
    -- data:
    time,
    containers,
    hashable,
    text,
    bytestring,
    -- control:
    placeholders == 0.1.*,
    errors,
    mtl,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    DeriveGeneric
    ImpredicativeTypes
    BangPatterns
    PatternGuards
    GADTs
    StandaloneDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    FlexibleInstances
    TypeFamilies
    TypeOperators
    FlexibleContexts
    NoImplicitPrelude
    EmptyDataDecls
    DataKinds
    NoMonomorphismRestriction
    RankNTypes
    ConstraintKinds
    DefaultSignatures
    TupleSections
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    DeriveDataTypeable
    GeneralizedNewtypeDeriving
    RecordWildCards
    MultiWayIf
    LiberalTypeSynonyms
    LambdaCase
  default-language:
    Haskell2010
