name:
  messaging-service
version:
  0.1.0
synopsis:
  A minimalistic library for implementing client-server remote services
description:
  An API abstracting over the typical tasks of client-server communication.
  It automates the authentication process, failure management and 
  the task of keeping the connections alive.
  The user can implement protocols of any form based.

  Useful for writing all kinds of services. 
  E.g., the <http://hackage.haskell.org/package/graph-db graph-db> 
  networking interface is based on this library.
category:
  Network, Service
homepage:
  https://github.com/nikita-volkov/messaging-service 
bug-reports:
  https://github.com/nikita-volkov/messaging-service/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/messaging-service.git


library
  hs-source-dirs:
    library
  other-modules:
    MessagingService.Protocol.Handshake
    MessagingService.Protocol.Interaction
    MessagingService.Client.InteractionT
    MessagingService.SessionT
    MessagingService.Util.Forking
    -- MessagingService.Server.Session
    MessagingService.Util.IOBuffer
    MessagingService.Util.FileSystem
    MessagingService.Util.Prelude
  exposed-modules:
    -- MessagingService.Server
    MessagingService.Client
  build-depends:
    -- streaming:
    pipes >= 4.0 && < 4.2,
    pipes-bytestring == 2.0.*,
    pipes-cereal-plus >= 0.3.1 && < 0.4,
    pipes-parse > 3.0.0,
    -- networking:
    network == 2.4.*,
    network-simple == 0.3.*,
    pipes-network == 0.6.*,
    -- file-system:
    filelock == 0.1.*,
    directory,
    system-fileio,
    system-filepath,
    -- concurrency:
    lifted-async == 0.1.*,
    async == 2.0.*,
    concurrent-extra == 0.7.*,
    stm,
    -- data:
    hashtables == 1.1.*,
    time,
    containers,
    hashable,
    text,
    bytestring,
    -- control:
    transformers-base == 0.4.*,
    monad-control == 0.3.*,
    free == 4.*,
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    errors >= 1.4.4,
    mtl,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    DeriveGeneric
    ImpredicativeTypes
    BangPatterns
    PatternGuards
    GADTs
    StandaloneDeriving
    MultiParamTypeClasses
    ScopedTypeVariables
    FlexibleInstances
    TypeFamilies
    TypeOperators
    FlexibleContexts
    NoImplicitPrelude
    EmptyDataDecls
    DataKinds
    NoMonomorphismRestriction
    RankNTypes
    ConstraintKinds
    DefaultSignatures
    TupleSections
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    DeriveDataTypeable
    GeneralizedNewtypeDeriving
    DeriveFunctor
    RecordWildCards
    MultiWayIf
    LiberalTypeSynonyms
    LambdaCase
  default-language:
    Haskell2010
